Major dashboard improvements: Yeti theme, bug fixes, and enhanced UX
🎨 Theme & Design Updates:
- Implemented Bootswatch Yeti theme for better readability
- Fixed green text visibility issues on blue background
- Updated all colors for light theme compatibility
- Enhanced chart colors and text visibility in Portfolio Overview
- Improved card styling with better shadows and hover effects

🔧 Bug Fixes:
- Fixed 0% growth display issue in Market Overview (JavaScript data mapping bug)
- Resolved timestamp inconsistency between Trade History and Market Overview
- Updated market data symlinks and cache synchronization
- Fixed latest_decisions.json update mechanism in dashboard_updater.py

🔗 Link Updates:
- Updated Coinbase links to new Advanced Trade format
- Changed from USD to EUR trading pairs (BTC-EUR, ETH-EUR, SOL-EUR)
- Updated all external links to use www.coinbase.com/advanced-trade/spot/

🧹 UI/UX Improvements:
- Removed duplicate allocation progress bars in Portfolio Overview
- Enhanced reasoning text boxes with better styling and expand functionality
- Improved form controls and button styling for light theme
- Updated navigation and status indicators for better contrast
- Enhanced table styling with proper alternating row colors

📊 Chart Enhancements:
- Fixed Portfolio Overview chart text visibility
- Updated chart colors for light background compatibility
- Improved legend and axis label readability
- Added proper grid lines and enhanced bar colors

🔄 Data Synchronization:
- Improved webserver sync functionality
- Fixed market data file linking and caching
- Enhanced latest decisions cache update mechanism
- Better error handling and data validation

All changes have been tested and synced to webserver.

--- a/dashboard/static/analysis.html
+++ b/dashboard/static/analysis.html
@@ -371,7 +371,7 @@
 
         // Function to update performance metrics
         async function updateMetrics() {
-            const portfolioData = await loadData('../data/portfolio/portfolio_data.json');
+            const portfolioData = await loadData('/crypto-bot/data/portfolio/portfolio.json');
             const tradeData = await loadData('../data/trades/trade_history.json');
             
             if (portfolioData) {
@@ -402,7 +402,7 @@
 
         // Function to update portfolio chart
         async function updatePortfolioChart() {
-            const data = await loadData('../data/portfolio/portfolio_history.csv');
+            const data = await loadData('/crypto-bot/data/portfolio/portfolio_history.csv');
             if (data) {
                 // Parse CSV data and update chart
                 // This would need to be implemented based on your CSV structure
@@ -425,7 +425,7 @@
 
         // Function to load strategy analysis
         async function loadStrategyAnalysis() {
-            const data = await loadData('../data/reports/strategy_performance.json');
+            const data = await loadData('/crypto-bot/data/reports/strategy_performance.json');
             if (data) {
                 const analysisHtml = `
                     <div class="row">
