Feature: Added 'Last 6 Hours' filter as default for Trade History
🕕 NEW TIME FILTER OPTION:
- Added 'Last 6 Hours' option to Trade History time period filter
- Set as default selection for immediate recent activity focus
- Perfect for monitoring latest trading decisions and executions

⚡ ENHANCED USER EXPERIENCE:
- Default view now shows most recent 6 hours of activity
- Ideal for active monitoring during trading sessions
- Quick access to recent AI decisions and trade outcomes
- Maintains all existing filter options (24h, 7d, 30d, All Time)

🔧 TECHNICAL IMPLEMENTATION:
- Updated time filtering logic to handle 6-hour calculations
- Proper millisecond conversion (6 * 60 * 60 * 1000)
- Seamless integration with existing filter system
- Maintains sorting and other filter combinations

📊 PRACTICAL BENEFITS:
- Immediate visibility of recent bot activity
- Better monitoring of current trading session
- Reduced clutter from older historical data
- Focus on actionable recent performance

Users now see the most relevant recent trading activity by default!

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -674,6 +674,7 @@
                                         <div class="col-md-3">
                                             <label class="form-label">Time Period</label>
                                             <select class="form-select bg-dark text-light" id="time-filter">
+                                                <option value="6h" selected>Last 6 Hours</option>
                                                 <option value="24h">Last 24 Hours</option>
                                                 <option value="7d">Last 7 Days</option>
                                                 <option value="30d">Last 30 Days</option>
@@ -1388,6 +1389,7 @@
                 if (timeFilter !== 'all') {
                     const now = new Date();
                     const timeLimit = {
+                        '6h': 6 * 60 * 60 * 1000,
                         '24h': 24 * 60 * 60 * 1000,
                         '7d': 7 * 24 * 60 * 60 * 1000,
                         '30d': 30 * 24 * 60 * 60 * 1000
