Fix: Resolved JavaScript error in analysis dashboard
🐛 FIXED JAVASCRIPT ERROR:
- Removed assetPerformanceChart initialization that was causing:
  'Cannot read properties of null (reading 'getContext')'
- Chart element no longer exists since we replaced it with table view
- Cleaned up chart variable declarations

🔧 TECHNICAL DETAILS:
- Error occurred at analysis.html:666 in initializeCharts function
- Trying to get context of non-existent 'assetPerformanceChart' canvas
- Removed chart initialization code for asset performance
- Kept table-based asset performance display

✅ RESOLUTION:
- Analysis dashboard now loads without JavaScript errors
- All existing functionality preserved
- Asset performance still displays correctly in table format
- Chart initialization only runs for existing canvas elements

The analysis dashboard now loads cleanly without console errors!

--- a/dashboard/static/analysis.html
+++ b/dashboard/static/analysis.html
@@ -580,7 +580,7 @@
         };
 
         // Initialize charts
-        let portfolioChart, allocationChart, activityChart, assetPerformanceChart;
+        let portfolioChart, allocationChart, activityChart;
 
         function initializeCharts() {
             // Portfolio Value Chart
@@ -655,31 +655,6 @@
                             '#1e7e34',
                             '#c82333',
                             '#e0a800'
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: chartOptions
-            });
-
-            // Asset Performance Chart
-            const assetPerfCtx = document.getElementById('assetPerformanceChart').getContext('2d');
-            assetPerformanceChart = new Chart(assetPerfCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['BTC', 'ETH', 'SOL'],
-                    datasets: [{
-                        label: 'Performance (%)',
-                        data: [0, 0, 0],
-                        backgroundColor: [
-                            '#f39c12',  // Bitcoin - Orange
-                            '#3498db',  // Ethereum - Blue
-                            '#9b59b6'   // Solana - Purple
-                        ],
-                        borderColor: [
-                            '#e67e22',
-                            '#2980b9',
-                            '#8e44ad'
                         ],
                         borderWidth: 1
                     }]
