Major Enhancement: AI-First Trading Strategy & Comprehensive Dashboard Improvements
🎯 CORE STRATEGY TRANSFORMATION:
• Replaced rigid portfolio rebalancing with AI-first trading strategy
• Removed trade-blocking rebalancing logic that was destroying profitable trades
• Implemented smart safety limits (€50 min EUR, 35% max EUR, 3% min crypto)
• Added dynamic position sizing based on AI confidence levels (0.5x to 1.5x)
• Enhanced risk management with confidence thresholds (70% minimum)

🧠 ENHANCED AI ANALYSIS:
• Comprehensive AI reasoning display in trading history details
• Technical indicators analysis (RSI, MACD, Bollinger Bands) with visual formatting
• Bot decision process transparency with confidence checks and risk management
• Market context display with price changes, trends, and analysis quality metrics
• Professional-grade analysis comparable to institutional trading tools

📊 DASHBOARD IMPROVEMENTS:
• Replaced "Portfolio Rebalancing" with "AI-First Trading Strategy" section
• Enhanced trading history with detailed AI analysis (4 comprehensive sections)
• Improved EUR balance warnings with popup tooltips instead of permanent boxes
• Fixed metric visibility issues with high-contrast styling
• Removed redundant "Trading Balance Status" section for cleaner interface
• Added professional visual design with gradients, color coding, and structured layouts

⚙️ CONFIGURATION UPDATES:
• Migrated from USD to EUR as base currency throughout the system
• Updated minimum trade amount from €10 to €30 for meaningful trades
• Disabled rigid portfolio rebalancing (PORTFOLIO_REBALANCE=false)
• Enhanced configuration validation and error handling
• Improved currency handling and precision in all calculations

🔧 TECHNICAL IMPROVEMENTS:
• Enhanced Coinbase client with better error handling and EUR support
• Improved trade execution logic with dynamic position sizing
• Better risk management integration with AI confidence scoring
• Enhanced data collection and analysis pipeline
• 

--- a/dashboard/static/analysis.html
+++ b/dashboard/static/analysis.html
@@ -150,6 +150,7 @@
             <div class="navbar-nav me-auto">
                 <a class="nav-link" href="index.html">Dashboard</a>
                 <a class="nav-link active" href="analysis.html">Analysis</a>
+                <a class="nav-link" href="config.html">Configuration</a>
             </div>
             <div class="ms-auto">
                 <span id="live-clock" class="me-3">
