fix: Standardize currency formatting to 2 decimal places
🔧 Currency Display Fixes:
- Fixed portfolio value showing 3 decimal places (.435) instead of 2 (.44)
- Changed toLocaleString() to toFixed(2) for consistent EUR formatting
- Updated price displays in market analysis section
- Fixed trade history table currency formatting

📊 Affected Areas:
- Portfolio Overview: Total value now shows €X.XX format
- Market Analysis: Price displays standardized to 2 decimals
- Trade History: Price and amount columns use consistent formatting

✅ Result: All EUR values now display with exactly 2 decimal places
for professional currency presentation.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -2870,7 +2870,7 @@
             const data = await loadData('/crypto-bot/data/portfolio/portfolio.json');
             if (data) {
                 document.getElementById('total-value').textContent = 
-                    '€' + parseFloat(data.portfolio_value_eur || 0).toLocaleString();
+                    '€' + parseFloat(data.portfolio_value_eur || 0).toFixed(2);
                 
                 // Calculate portfolio change
                 const changePercent = ((data.portfolio_value_eur - data.initial_value_eur) / data.initial_value_eur) * 100;
@@ -3168,7 +3168,7 @@
                     const data = trade.market_data;
                     html += `
                         <div class="context-item">
-                            <strong>Price:</strong> €${data.price ? data.price.toLocaleString() : 'N/A'}
+                            <strong>Price:</strong> €${data.price ? parseFloat(data.price).toFixed(2) : 'N/A'}
                         </div>
                     `;
                     
@@ -3437,8 +3437,8 @@
                             </td>
                             <td>${trade.product_id.split('-')[0]}</td>
                             <td>${parseFloat(trade.crypto_amount || 0).toFixed(8)}</td>
-                            <td>€${parseFloat(trade.price).toLocaleString()}</td>
-                            <td>€${parseFloat(trade.trade_amount_usd || 0).toLocaleString()}</td>
+                            <td>€${parseFloat(trade.price).toFixed(2)}</td>
+                            <td>€${parseFloat(trade.trade_amount_usd || 0).toFixed(2)}</td>
                             <td>${(trade.confidence || 0)}%</td>
                             <td>
                                 <div class="reasoning-container">
